--- a/public/programming_tests.html
+++ b/public/programming_tests.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Матеріали для програмування – BrainHub</title>
+    <title>Матеріали для програмування – SkillBridge</title>
     <meta name="description" content="Вивчайте програмування з BrainHub: курси Scratch, Python, HTML, CSS, JavaScript для всіх рівнів.">
     <meta name="keywords" content="програмування, Scratch, Python, HTML, CSS, JavaScript, онлайн-навчання, курси програмування">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
@@ -102,7 +102,7 @@
     <nav class="fixed top-0 left-0 w-full bg-gradient-to-r from-blue-700 to-purple-600 text-white py-4 z-50 shadow-2xl">
         <div class="container mx-auto px-4">
             <div class="flex justify-between items-center">
-                <a href="/" class="text-3xl font-extrabold tracking-tight">BrainHub 🧮</a>
+                <a href="/" class="text-3xl font-extrabold tracking-tight">SkillBridge 🧮</a>
                 <div class="hidden md:flex space-x-8">
                     <a href="home.html" class="text-lg font-medium hover:text-blue-200 transition duration-200">Головна</a>
                     <a href="about.html" class="text-lg font-medium hover:text-blue-200 transition duration-200">Про нас</a>
@@ -133,7 +133,7 @@
     <!-- Геройський блок -->
     <section class="hero-bg text-center text-white">
         <div class="container mx-auto px-4 py-16">
-            <h1 class="text-5xl md:text-6xl font-extrabold mb-6 gradient-text">Матеріали для програмування – BrainHub</h1>
+            <h1 class="text-5xl md:text-6xl font-extrabold mb-6 gradient-text">Матеріали для програмування – SkillBridge</h1>
             <p class="text-xl md:text-2xl mb-10 leading-relaxed">Кодуй з розумінням — від простого до складного! 💻</p>
             <div class="flex flex-col sm:flex-row justify-center gap-6">
                 <a href="course.html" class="text-white px-8 py-4 rounded-xl text-lg font-semibold btn-cta">Доєднатися до наших курсів</a>
@@ -184,9 +184,9 @@
                         <span class="text-4xl mr-3">📘</span>
                         <h3 class="text-xl font-semibold text-gray-100">Основи Scratch</h3>
                     </div>
-                    <p class="text-gray-400 mb-4">Вступ до програмування через створення ігор.</p>
-                    <p class="text-sm text-gray-500 mb-4">Початковий рівень, 8–12 років</p>
-                    <a href="https://drive.google.com" target="_blank" class="mt-auto text-white px-6 py-3 rounded-lg text-lg font-semibold btn-cta inline-block text-center">Завантажити PDF</a>
+                    <p class="text-gray-400 mb-4">Вступ до програмування , знайомство із інтерфейсом .</p>
+                    <p class="text-sm text-gray-500 mb-4">Початковий рівень, 7px років</p>
+                    <a href="https://www.canva.com/design/DAGt6fW4twI/POiu1x4HQREPD1hjZAcL4w/edit?utm_content=DAGt6fW4twI&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank" class="mt-auto text-white px-6 py-3 rounded-lg text-lg font-semibold btn-cta inline-block text-center">Завантажити PDF</a>
                 </div>
                 <div class="material-card border-2 border-blue-900 rounded-xl p-6 shadow-lg" data-course="scratch" data-type="animation" data-format="video">
                     <div class="flex items-center mb-4">
@@ -195,7 +195,7 @@
                     </div>
                     <p class="text-gray-400 mb-4">Інтерактивне відео для створення анімацій.</p>
                     <p class="text-sm text-gray-500 mb-4">Початковий рівень, 8–12 років</p>
-                    <a href="https://youtube.com" target="_blank" class="mt-auto text-white px-6 py-3 rounded-lg text-lg font-semibold btn-cta inline-block text-center">Дивитись відео</a>
+                    <a href="https://youtu.be/hHc4-CYszpA?si=-ejjmxzSa6KgdvRY" target="_blank" class="mt-auto text-white px-6 py-3 rounded-lg text-lg font-semibold btn-cta inline-block text-center">Дивитись відео</a>
                 </div>
                 <div class="material-card border-2 border-blue-900 rounded-xl p-6 shadow-lg" data-course="scratch" data-type="game" data-format="test">
                     <div class="flex items-center mb-4">
@@ -204,7 +204,7 @@
                     </div>
                     <p class="text-gray-400 mb-4">Перевірка знань зі створення ігор.</p>
                     <p class="text-sm text-gray-500 mb-4">Початковий рівень, 8–12 років</p>
-                    <a href="#" class="mt-auto text-white px-6 py-3 rounded-lg text-lg font-semibold btn-test inline-block text-center">Пройти тест</a>
+                    <a href="https://wordwall.net/play/95095/117/353" class="mt-auto text-white px-6 py-3 rounded-lg text-lg font-semibold btn-test inline-block text-center">Пройти тест</a>
                 </div>
             </div>
         </div>
@@ -222,7 +222,7 @@
                     </div>
                     <p class="text-gray-400 mb-4">Основи синтаксису та змінних.</p>
                     <p class="text-sm text-gray-500 mb-4">Початковий рівень, 12–16 років</p>
-                    <a href="https://drive.google.com" target="_blank" class="mt-auto text-white px-6 py-3 rounded-lg text-lg font-semibold btn-cta inline-block text-center">Завантажити PDF</a>
+                    <a href="https://www.canva.com/design/DAGt_LB3ZP4/dQA9cnWmXOfnVlS4pcL2sA/edit?utm_content=DAGt_LB3ZP4&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank" class="mt-auto text-white px-6 py-3 rounded-lg text-lg font-semibold btn-cta inline-block text-center">Завантажити PDF</a>
                 </div>
                 <div class="material-card border-2 border-blue-900 rounded-xl p-6 shadow-lg" data-course="python" data-type="loops" data-format="video">
                     <div class="flex items-center mb-4">
@@ -231,7 +231,7 @@
                     </div>
                     <p class="text-gray-400 mb-4">Відео з поясненнями циклів for і while.</p>
                     <p class="text-sm text-gray-500 mb-4">Початковий рівень, 12–16 років</p>
-                    <a href="https://youtube.com" target="_blank" class="mt-auto text-white px-6 py-3 rounded-lg text-lg font-semibold btn-cta inline-block text-center">Дивитись відео</a>
+                    <a href="https://youtu.be/GgRYasr6PoU?si=3PwY9KA51sUFizzp" target="_blank" class="mt-auto text-white px-6 py-3 rounded-lg text-lg font-semibold btn-cta inline-block text-center">Дивитись відео</a>
                 </div>
                 <div class="material-card border-2 border-blue-900 rounded-xl p-6 shadow-lg" data-course="python" data-type="basics" data-format="test">
                     <div class="flex items-center mb-4">
@@ -240,7 +240,7 @@
                     </div>
                     <p class="text-gray-400 mb-4">Перевірка базових знань Python.</p>
                     <p class="text-sm text-gray-500 mb-4">Початковий рівень, 12–16 років</p>
-                    <a href="#" class="mt-auto text-white px-6 py-3 rounded-lg text-lg font-semibold btn-test inline-block text-center">Пройти тест</a>
+                    <a href="https://wordwall.net/play/95125/518/157" class="mt-auto text-white px-6 py-3 rounded-lg text-lg font-semibold btn-test inline-block text-center">Пройти тест</a>
                 </div>
             </div>
         </div>
@@ -258,16 +258,16 @@
                     </div>
                     <p class="text-gray-400 mb-4">Створення структури веб-сторінок.</p>
                     <p class="text-sm text-gray-500 mb-4">Середній рівень, 14–18 років</p>
-                    <a href="https://drive.google.com" target="_blank" class="mt-auto text-white px-6 py-3 rounded-lg text-lg font-semibold btn-cta inline-block text-center">Завантажити PDF</a>
+                    <a href="https://www.canva.com/design/DAGt_NElBrM/nqXxtdxeYqll9X2VhfR3KQ/edit?utm_content=DAGt_NElBrM&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank" class="mt-auto text-white px-6 py-3 rounded-lg text-lg font-semibold btn-cta inline-block text-center">Завантажити PDF</a>
                 </div>
                 <div class="material-card border-2 border-blue-900 rounded-xl p-6 shadow-lg" data-course="web" data-type="css" data-format="video">
                     <div class="flex items-center mb-4">
                         <span class="text-4xl mr-3">🎥</span>
-                        <h3 class="text-xl font-semibold text-gray-100">Стилізація з CSS</h3>
+                        <h3 class="text-xl font-semibold text-gray-100">Структура HTML</h3>
                     </div>
                     <p class="text-gray-400 mb-4">Відеоурок зі стилізації веб-сторінок.</p>
                     <p class="text-sm text-gray-500 mb-4">Середній рівень, 14–18 років</p>
-                    <a href="https://youtube.com" target="_blank" class="mt-auto text-white px-6 py-3 rounded-lg text-lg font-semibold btn-cta inline-block text-center">Дивитись відео</a>
+                    <a href="https://youtu.be/qtLa7uqHNwI?si=3TpHL7fihp8qZ8lW" target="_blank" class="mt-auto text-white px-6 py-3 rounded-lg text-lg font-semibold btn-cta inline-block text-center">Дивитись відео</a>
                 </div>
                 <div class="material-card border-2 border-blue-900 rounded-xl p-6 shadow-lg" data-course="web" data-type="javascript" data-format="test">
                     <div class="flex items-center mb-4">
@@ -276,7 +276,7 @@
                     </div>
                     <p class="text-gray-400 mb-4">Перевірка знань з основ JavaScript.</p>
                     <p class="text-sm text-gray-500 mb-4">Середній рівень, 14–18 років</p>
-                    <a href="#" class="mt-auto text-white px-6 py-3 rounded-lg text-lg font-semibold btn-test inline-block text-center">Пройти тест</a>
+                    <a href="https://wordwall.net/play/95126/221/603" class="mt-auto text-white px-6 py-3 rounded-lg text-lg font-semibold btn-test inline-block text-center">Пройти тест</a>
                 </div>
             </div>
         </div>
@@ -287,11 +287,10 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <div>
-                    <h3 class="text-lg font-semibold">Контакти</h3>
-                    <p>Телефон: +380 123 456 789</p>
-                    <p>Email: info@brainhub.ua</p>
-                    <p>Telegram: @BrainHubUA</p>
-                    <p>Instagram: @BrainHubUA</p>
+                    <h3>Контакти</h3>
+                    <p class="text-white">📧 info:SkillBridgeUA@gmail.com</p>
+                    <p class="text-white">Telegram: @SkillBridgeUA</p>
+                    <p class="text-white">Instagram: @SkillBridgeUA</p>
                 </div>
                 <div>
                     <h3 class="text-lg font-semibold">Інформація</h3>
